# innovista-pk-local-language-translator

./: README.md
backend/: pyproject.toml
backend/src/backend/: logic.py
extension/: manifest.json  popup.css  popup.html  popup.js
web/: note.txt
