[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marjan Ahmed", email = "marjan.ahmed08@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "openai-agents>=0.2.10",
    "uvicorn>=0.35.0",
]

[project.scripts]
backend = "backend:main"
code = "backend:logic.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
